--- a/www/_____/css/styles.css
+++ b/www/_____/css/styles.css
@@ -1181,6 +1181,8 @@ label {
 	width: 100%;
 }
 
+
+/* CONTACTS */
 .contacts-area { 
 	padding-top: 50px;
 }
@@ -1287,12 +1289,223 @@ label {
 .contacts-area .social:hover {
 	color: #000;
 }
-.contacts-area .a {
-	
+
+
+/* DOCTOR */
+.doctor-area { 
+	padding: 50px 0 80px 0;
 }
-.contacts-area .a {
-	
+.doctor-area .main-table {
+	width: 100%;
 }
-.contacts-area .a {
-	
+.doctor-area .main-table td {
+	vertical-align: top;
+}
+.doctor-area .main-table td:first-child {
+	width: 290px;
+}
+.doctor-area .main-table td:nth-child(2) {
+	width: 134px;
+}
+.doctor-area .main-table td:last-child {
+	width: auto;
+}
+.doctor-area h1 {
+	color: #000000;
+	font-size: 30px;
+	margin-bottom: 10px;
+	line-height: 30px;
+}
+.doctor-area .top-info {
+	position: relative;
+	padding-left: 400px;
+	margin-top: 20px;
+	min-height: 400px;
+	padding-bottom: 68px;
+	box-sizing: border-box;
+}
+.doctor-area .top-info .photo {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 360px;
+	height: 400px;
+	background-color: #e7e7e7;
+}
+.doctor-area .top-info .title {
+	color: #000000;
+	font-size: 16px;
+	font-family: 'open_sansbold';
+	line-height: 20px;
+	margin-bottom: 20px;
+}
+.doctor-area .top-info p {
+	color: #7e848e;
+	padding-bottom: 13px;
+	line-height: 18px;
+}
+.doctor-area .top-info p b {
+	font-weight: normal;
+	font-family: 'open_sansbold';
+}
+.doctor-area .top-info .button {
+	position: absolute;
+	bottom: 0;
+	left: 400px;
+	background-color: #8cc642;
+	background-image: url(../images/green.png);
+	border-radius: 3px;
+	line-height: 48px;
+	text-align: center;
+	color: #fff;
+	width: 283px;
+	font-size: 14px;
+	cursor: pointer;
+	font-family: 'open_sansbold';
+}
+.doctor-area .top-info .button:hover {
+	background-image: url(../images/blue.png);
+	background-color: #53afbd;
+}
+.doctor-area .bottom-info {
+	margin-top: 40px
+}
+.doctor-area .bottom-info h3 {
+	color: #7e848e;
+	font-size: 20px;
+	font-family: 'open_sansbold';
+	margin-bottom: 17px;
+	margin-top: 10px;
+}
+.doctor-area .bottom-info p {
+	font-size: 16px;
+	color: #7e848e;
+	line-height: 20px;
+}
+.doctor-area .social-links {
+	font-size: 12px;
+	color: #5b5b5b;
+	margin-top: 24px;
+}
+.doctor-area .social-links .fa {
+	margin-left: 18px;
+	font-size: 17px;
+	color: #5b5b5b;
+}
+.doctor-area .social-links .fa:hover {
+	color: #000;
+}
+.doctor-area .pictutres {
+	margin-top: 24px;
+	line-height: 0;
+	font-size: 0;
+	letter-spacing: -1px;
+}
+.doctor-area .pictutre {
+	width: 240px;
+	height: 170px;
+	display: inline-block;
+	margin-right: 14px;
+	line-height: 18px;
+	font-size: 14px;
+	letter-spacing: 0;
+	background-color: #e7e7e7;
+	vertical-align: top;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+}
+.doctor-area .pictutre:nth-child(3n) {
+	margin-right: 0;
+}
+.doctor-area .a {
+
+}
+.doctor-area .a {
+
+}
+
+
+/* SIDE NAV */
+.side-nav {
+	padding-bottom: 18px;
+	position: relative;
+}
+.side-nav:after {
+	content: '';
+	position: absolute;
+	top: 100%;
+	left: 0;
+	right: 0;
+	height: 1px;
+	background-image: url(../images/dotted.png);
+}
+.side-nav .section-title {
+	color: #2a2d32;
+	font-size: 18px;
+	padding-left: 37px;
+	background-image: url(../images/inf.png);
+	background-repeat: no-repeat;
+	background-position: 0 50%;
+	font-family: 'open_sansbold';
+	margin-bottom: 26px;
+}
+.side-nav .nav-link {
+	line-height: 16px;
+	padding: 8px 0;
+}
+.side-nav .nav-link a {
+	color: #53afbd;
+}
+.side-nav .nav-link a:hover {
+	color: #8cc642;
+}
+.side-nav .nav-link.active a {
+	font-family: 'open_sansbold';
+}
+.subscr-form {
+	margin-top: 25px;
+	position: relative;
+}
+.subscr-form .subscr-title {
+	font-family: 'open_sansbold';	
+	color: #5b5b5b;
+	margin-bottom: 22px;
+}
+.subscr-form .subscr-input {
+	position: relative;
+}
+.subscr-form input[type="text"] {
+	background-color: #f2f3f6;
+	padding: 15px;
+	border-radius: 4px;
+	border-top: 1px solid #e7e8ec;
+	width: 100%;
+	padding-right: 52px;
+}
+.subscr-form input[type="submit"] {
+	position: absolute;
+	right: 12px;
+	top: 9px;
+	width: 31px;
+	height: 31px;
+	border-radius: 50%;
+	background-color: transparent;
+	background-image: url(../images/submit.png);
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	cursor: pointer;
+}
+
+.breadcrumbs {
+	font-size: 12px;
+	color: #b7b7b7;
+}
+.breadcrumbs span,
+.breadcrumbs a {
+	color: #b7b7b7;
+	margin: 0 3px;
+	display: inline-block;
+}
+.breadcrumbs a:hover {
+	color: #000;
 }
