--- a/www/_____/css/styles.css
+++ b/www/_____/css/styles.css
@@ -1550,6 +1550,52 @@ label {
 
 
 
+/* DOWNLOAD */
+.download-area { 
+	padding: 50px 0 70px 0;
+}
+.download-area h1 {
+	color: #000000;
+	font-size: 30px;
+	margin-bottom: 10px;
+	line-height: 30px;
+}
+.download-area .download-content {
+	margin-top: 22px;
+}
+.download-area .items {
+	margin-top: 15px;
+	padding-bottom: 18px;
+}
+.download-area .item {
+	position: relative;
+	padding-left: 45px;
+	font-size: 16px;
+	padding-bottom: 14px;
+}
+.download-area .items a {
+	position: absolute;
+	color: #99d117;
+	left: 4px;
+	top: 4px;
+}
+.download-area .items a:hover {
+	color: #000;
+}
+.download-area .item b {
+	font-weight: normal;
+	font-family: 'open_sansbold';
+}
+.download-area .items {
+
+}
+.download-area .items {
+
+}
+.download-area .items {
+
+}
+
 
 /* SIDE NAV */
 .side-nav {
