--- a/www/_____/css/styles.css
+++ b/www/_____/css/styles.css
@@ -1355,41 +1355,7 @@ label {
 .doctor-area .bottom-info {
 	margin-top: 40px
 }
-.doctor-area .social-links {
-	font-size: 12px;
-	color: #5b5b5b;
-	margin-top: 24px;
-}
-.doctor-area .social-links .fa {
-	margin-left: 18px;
-	font-size: 17px;
-	color: #5b5b5b;
-}
-.doctor-area .social-links .fa:hover {
-	color: #000;
-}
-.doctor-area .pictutres {
-	margin-top: 24px;
-	line-height: 0;
-	font-size: 0;
-	letter-spacing: -1px;
-}
-.doctor-area .pictutre {
-	width: 240px;
-	height: 170px;
-	display: inline-block;
-	margin-right: 14px;
-	line-height: 18px;
-	font-size: 14px;
-	letter-spacing: 0;
-	background-color: #e7e7e7;
-	vertical-align: top;
-	background-repeat: no-repeat;
-	background-position: 50% 50%;
-}
-.doctor-area .pictutre:nth-child(3n) {
-	margin-right: 0;
-}
+
 
 
 
@@ -1799,4 +1765,41 @@ label {
 .pagination a:hover {
 	color: #000;
 	background-color: #f1f1f1;
+}
+
+
+.bottom-interactive-content .social-links {
+	font-size: 12px;
+	color: #5b5b5b;
+	margin-top: 24px;
+}
+.bottom-interactive-content .social-links .fa {
+	margin-left: 18px;
+	font-size: 18px;
+	color: #5b5b5b;
+}
+.bottom-interactive-content .social-links .fa:hover {
+	color: #000;
+}
+.bottom-interactive-content .pictutres {
+	margin-top: 24px;
+	line-height: 0;
+	font-size: 0;
+	letter-spacing: -1px;
+}
+.bottom-interactive-content .pictutre {
+	width: 240px;
+	height: 170px;
+	display: inline-block;
+	margin-right: 14px;
+	line-height: 18px;
+	font-size: 14px;
+	letter-spacing: 0;
+	background-color: #e7e7e7;
+	vertical-align: top;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+}
+.bottom-interactive-content .pictutre:nth-child(3n) {
+	margin-right: 0;
 }
