--- a/www/_____/css/styles.css
+++ b/www/_____/css/styles.css
@@ -1383,8 +1383,8 @@ label {
 	width: 230px;
 	height: 300px;
 	display: inline-block;
-	margin-right: 29px;
-	margin-bottom: 29px;
+	margin-right: 41px;
+	margin-bottom: 41px;
 	line-height: 18px;
 	font-size: 14px;
 	letter-spacing: 0;
@@ -1422,7 +1422,7 @@ label {
 	width: 170px;
 	color: #000000;
 	display: inline-block;
-	margin-right: 23px;
+	margin-right: 31px;
 	margin-bottom: 30px;
 	line-height: 13px;
 	font-size: 10px;
@@ -1577,7 +1577,7 @@ label {
 	width: 230px;
 	color: #000000;
 	display: inline-block;
-	margin-right: 29px;
+	margin-right: 41px;
 	margin-bottom: 55px;
 	line-height: 16px;
 	font-size: 14px;
@@ -1617,6 +1617,82 @@ label {
 	color: #7e848e;
 	line-height: 15px;
 }
+
+
+/* ABOUT */
+.about-area { 
+	padding: 50px 0 70px 0;
+}
+.about-area h1 {
+	color: #000000;
+	font-size: 30px;
+	margin-bottom: 10px;
+	line-height: 30px;
+}
+.about-area .about-content {
+	margin-top: 22px;
+}
+
+
+/* VIDEOBLOG */
+.videoblog-area { 
+	padding: 50px 0 70px 0;
+}
+.videoblog-area h1 {
+	color: #000000;
+	font-size: 30px;
+	margin-bottom: 10px;
+	line-height: 30px;
+}
+.videoblog-area .videoblog-content {
+	margin-top: 22px;
+}
+.videoblog-area .items {
+	margin-top: 20px;
+	line-height: 0;
+	font-size: 0;
+	letter-spacing: -1px;
+}
+.videoblog-area .item {
+	width: 370px;
+	color: #000000;
+	display: inline-block;
+	margin-right: 31px;
+	margin-bottom: 55px;
+	line-height: 16px;
+	font-size: 14px;
+	letter-spacing: 0;
+	vertical-align: top;
+}
+.videoblog-area .item:nth-child(2n) {
+	margin-right: 0;
+}
+.videoblog-area .item .image {
+	height: 230px;
+	background-color: #e7e7e7;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	border-radius: 2px 2px 0 0;
+	cursor: pointer;
+}
+.videoblog-area .item .content {
+	border: 1px solid #e7e8ec;
+	border-top: 0;
+	padding: 20px 26px;
+	border-radius: 0 0 2px 2px;
+}
+.videoblog-area .item .title {
+	font-family: 'open_sansbold';
+	font-size: 18px;
+	color: #2a2d32;
+}
+.videoblog-area .item .date {
+	color: #c5c7cb;
+	line-height: 15px;
+	font-size: 13px;
+	margin-bottom: 20px;
+}
+
 
 
 /* SIDE NAV */
@@ -1711,11 +1787,11 @@ label {
 	vertical-align: top;
 }
 .main-table td:first-child {
-	width: 290px;
+	width: 270px;
 	padding-bottom: 50px;
 }
 .main-table td:nth-child(2) {
-	width: 134px;
+	width: 130px;
 }
 .main-table td:last-child {
 	width: auto;
@@ -1791,7 +1867,7 @@ label {
 	width: 240px;
 	height: 170px;
 	display: inline-block;
-	margin-right: 14px;
+	margin-right: 26px;
 	line-height: 18px;
 	font-size: 14px;
 	letter-spacing: 0;
