--- a/www/_____/css/styles.css
+++ b/www/_____/css/styles.css
@@ -1008,6 +1008,7 @@ label {
 	display: block;
 	background-image: url(../images/blue.png);
 	background-color: #53afbd;
+	z-index: 3;
 }
 .footer .block-inner {
 	min-height: 420px;
@@ -1383,8 +1384,8 @@ label {
 	width: 230px;
 	height: 300px;
 	display: inline-block;
-	margin-right: 41px;
-	margin-bottom: 41px;
+	margin-right: 40px;
+	margin-bottom: 40px;
 	line-height: 18px;
 	font-size: 14px;
 	letter-spacing: 0;
@@ -1422,7 +1423,7 @@ label {
 	width: 170px;
 	color: #000000;
 	display: inline-block;
-	margin-right: 31px;
+	margin-right: 30px;
 	margin-bottom: 30px;
 	line-height: 13px;
 	font-size: 10px;
@@ -1577,7 +1578,7 @@ label {
 	width: 230px;
 	color: #000000;
 	display: inline-block;
-	margin-right: 41px;
+	margin-right: 40px;
 	margin-bottom: 55px;
 	line-height: 16px;
 	font-size: 14px;
@@ -1657,7 +1658,7 @@ label {
 	width: 370px;
 	color: #000000;
 	display: inline-block;
-	margin-right: 31px;
+	margin-right: 30px;
 	margin-bottom: 55px;
 	line-height: 16px;
 	font-size: 14px;
@@ -1716,7 +1717,7 @@ label {
 	width: 370px;
 	color: #000000;
 	display: inline-block;
-	margin-right: 31px;
+	margin-right: 30px;
 	margin-bottom: 45px;
 	line-height: 16px;
 	font-size: 14px;
@@ -1932,7 +1933,7 @@ label {
 	width: 240px;
 	height: 170px;
 	display: inline-block;
-	margin-right: 26px;
+	margin-right: 25px;
 	line-height: 18px;
 	font-size: 14px;
 	letter-spacing: 0;
